--- a/forge/4.html
+++ b/forge/4.html
@@ -52,11 +52,11 @@
 		<div class="col-md-5 pro">   
                     <div id="progress_iden" class="d-none d-md-block"> 
                         <div class="row">
-                            <div class="col-md-2 pi1">Istart</div>
-                            <div class="col-md-2 pi2">Icamp</div>
-                            <div class="col-md-2 pi3">Protosem</div>
-                            <div class="col-md-3 pi4">Launchpad</div>
-                            <div class="col-md-3 pi5">Product Sales</div>
+                            <div class="col-md-2 pi1">Ideation</div>
+                            <div class="col-md-2 pi2">Hackathon</div>
+                            <div class="col-md-2 pi3">Prototype</div>
+                            <div class="col-md-3 pi4">Grant Funding</div>
+                            <div class="col-md-3 pi5">Incubation</div>
                         </div>
                     
 
@@ -66,7 +66,7 @@
 
 
                 <div id="myProgress">
-                    <img src="9243.png" class="img1">
+                   
                     <img src="9243.png" class="img2">
                     <img src="9243.png" class="img3">
                     <img src="9243.png" class="img4">
@@ -89,16 +89,16 @@ during incidence of stroke
 <br>
 
 <div>
-          <span> <img src="https://www.w3schools.com/howto/img_avatar.png" class="avatar" alt="Avatar" style=" border-radius: 50%;width:20%;margin-top:5%;margin-right:8%"></span> 
-           <span> <img src="https://www.w3schools.com/howto/img_avatar2.png" class="avatar" alt="Avatar" style=" border-radius: 50%;width:23%;margin-top:5%;margin-right:8%"></span> 
-            <span> <img src="https://www.w3schools.com/howto/img_avatar.png" class="avatar" alt="Avatar" style=" border-radius: 50%;width:20%;margin-top:8%;"></span> 
+          <span> <img src="../assets/images/Proto contents/18.1 Gloveit/1.jpg" class="avatar" alt="Avatar" style=" border-radius: 50%;width:20%;margin-top:5%;margin-right:8%"></span> 
+           <span> <img src="../assets/images/Proto contents/18.1 Gloveit/2.jpg" class="avatar" alt="Avatar" style=" border-radius: 50%;width:21%;margin-top:5%;margin-right:8%"></span> 
+            <span> <img src="../assets/images/Proto contents/18.1 Gloveit/3.jpg" class="avatar" alt="Avatar" style=" border-radius: 50%;width:20%;margin-top:8%;"></span> 
 			
             </div>
 			</div>
 
 		</div>
 		<div class="col-md-5 con1">
-			<img src="4.jpg" class="img-fluid" id="change" >
+			<img src="../assets/images/Proto contents/18.1 Gloveit/mu.jpg" class="img-fluid" id="change" >
 
 
 		</div>
@@ -171,6 +171,7 @@ during incidence of stroke
                             </tr>
                         </tbody>
                     </table>
+                    <p> *To know more about Product Innovation Rubrics read the <a>blog</a></p>
     </div>
 
     <div class="col-md-5">
