--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         <a href="#partners" ><p class="downarrow"><i class="arrow down"></i></p></a>
         </div>
             
-        <div id="partners" class="container page" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600">
+        <div id="partners" class="container-fluid page" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600">
                 <div style="height:80px;"></div>   
             <div class="row mt-5 mb-5">
                         <div class="col-md-4 col-xs-12 mb-5 justify-content-center d-flex"><h3>Innovation for Employability</h3></div>
